--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ local.properties
 .recommenders
 mvnw
 mvnw.cmd
+src/test/
+src/main/resources/*.yml
 
 # External tool builders
 .externalToolBuilders/
